[gd_scene load_steps=4 format=3 uid="uid://b53n48pnvb6ga"]

[ext_resource type="PackedScene" uid="uid://c2wja7c6241uk" path="res://scenes/stuff/individual.tscn" id="1_8lcoe"]
[ext_resource type="Script" path="res://scenes/levels/main.gd" id="1_vistl"]
[ext_resource type="Texture2D" uid="uid://00gpe6jvpm0p" path="res://assets/tiptext.aseprite" id="2_kjgbk"]

[node name="main" type="Node2D"]
script = ExtResource("1_vistl")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -6
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Tiptext" type="Sprite2D" parent="."]
texture = ExtResource("2_kjgbk")

[node name="Individual" parent="." instance=ExtResource("1_8lcoe")]
position = Vector2(497, 314)

[connection signal="damage_taken" from="Individual" to="." method="_on_individual_damage_taken"]
[connection signal="switch_level" from="Individual" to="." method="switch_level"]
